
    * Only update autojoin settings when ctrlproxy is completely logged in. 
	  (#113)

    * Increase the debug level at which messages about joins/parts are 
	  logged.

    * Put linestack state data in separate files. This will make it possible 
	  in the future to remove some of the state files.

	* Avoid data overhead when responding to /NAMES out of cache.

  BUG FIXES

    * Don't "forget" listener password.

	* Don't add all existing networks to autoconnect list. (#90)

	* Fix a couple of minor memory leaks.

	* Store CTCP ACTIONs for replication.

	* Warn about unknown networks listed for listeners rather than crash.

	* Fixed segfault when no conversion is being used. Patch by Ashish Shukla.

	* Don't use AI_ADDRCONFIG if it's not provided by the system.  (#179)

	* Fix segfault when address type is not reachable at the moment. (#177)
	  Patch by wahjava@gmail.com.

	* Abort startup when one or more listener ports are already in use. 
	  (#175)

	* Fix crash bug when client shuts down correctly. (#176)

	* Allow multi-character prefixes for users in channels.

	* Support EXTBAN parameter in 005 lines.

	* Handle 008 responses.

	* Cache more than just the first result returned in RPL_USERHOST.

	* Fix hostmask and response code returned by USERHOST in administration 
	  network.

	* Fix timestamp marshalling. (#180)

	* Correctly recognize error responses to WHOIS and WHOWAS. (#136)

	* Actually remove networks from disk when they have been removed in 
	  the configuration.

	* Parse removals of banlist entries correctly.

	* Correctly generate prefix when replicating users that have more 
	  than one mode set. (Martin Meredith)

  INTERNALS

    * A simple, single API is now used for managing modes.

Ctrlproxy 3.0.5 2007-12-07

  IMPROVEMENTS
  
    * Integrate auto-away module into the core.

    * New settings ``autosave'', ``replication'', ``learn-nickserv'', 
      ``learn-network-name'', ``admin-log'', ``admin-user''.
